# TransformerEngine

./: .gitmodules  CLAUDE.md  SPRINT5.md  SPRINT8.md  SPRINT9.md  gemm_shardy_example.py  run_comm.sh  setup.py  specific_gemm_example.py
build_tools/: jax.py  pytorch.py
comm_docs/: CommGemm_Documentation_Master_Index.md  CommOverlap_Classes_Documentation.md  JAX_CommGemm_Extension_Documentation.md  JAX_CommGemm_Implementations_Documentation.md
docs/: jax_nccl_ep.md  nccl_ep_topk_grad_issue.md
examples/jax/collective_gemm/: common.py  conftest.py  flax_with_overlap.py  gemm_with_overlap.py  run_test_cgemm.sh  test_dense_grad.py  test_gemm.py  test_layernorm_mlp_grad.py
examples/jax/comm_overlap/: gemm_with_overlap.py  layer_prim_with_overlap.py  old_layer_prim_with_overlap.py  test_dense_grad.py  test_gemm.py
examples/jax/encoder/: test_model_parallel_encoder.py  test_multigpu_encoder.py  test_multiprocessing_encoder.py  test_single_gpu_encoder.py
examples/jax/ep/: common.py  conftest.py  run_test_ep.sh  test_ep_pipeline.py
examples/pytorch/ep/: ep_moe.py  run_test_ep.sh
examples/pytorch/ep/bench/: OPT.md  ep_bench.py  run_ep_bench.sh
sprints/: MR-nccl_ep-tma-alignment.md
tests/cpp/: run_norm_tests.sh
tests/cpp/operator/: CMakeLists.txt  test_layernorm.cu  test_rmsnorm.cu
tests/cpp_distributed/: CMakeLists.txt  run_test_ep.sh  test_ep.cu  test_ep_common.h  test_ep_coverage.cu  test_ep_init.cu  test_ep_pipeline.cu
tests/jax/: multi_process_launch_ep.sh  test_custom_call_compute.py  test_distributed_layernorm_mlp.py  test_einsum.py  test_multi_process_ep.py  test_multi_process_ep_nle2.py  test_multi_process_ep_sharded.py  utils.py
tests/pytorch/attention/: test_attention.py
tests/pytorch/distributed/: run_ep.py  run_test_ep.sh
transformer_engine/common/: 1  CMakeLists.txt
transformer_engine/common/comm_gemm_overlap/: comm_gemm_overlap.cpp
transformer_engine/common/comm_gemm_overlap/userbuffers/: userbuffers-host.cpp  userbuffers.cu  userbuffers.h
transformer_engine/common/ep/: ep_api.cpp  ep_backend.cpp  ep_backend.h  ep_manager.cpp  ep_manager.h  nccl_ep_backend.cpp  nccl_ep_backend.h
transformer_engine/common/fused_attn/: fused_attn.cpp
transformer_engine/common/gemm/: cublaslt_gemm.cu
transformer_engine/common/include/transformer_engine/: comm_gemm_overlap.h  comm_window.h  ep.h  gemm.h
transformer_engine/common/layer_norm/: ln_api.cpp  norms.cpp  norms.h
transformer_engine/common/normalization/: common.cpp  common.h
transformer_engine/common/normalization/layernorm/: ln_api.cpp
transformer_engine/common/normalization/rmsnorm/: rmsnorm_api.cpp
transformer_engine/common/rmsnorm/: rmsnorm_api.cpp
transformer_engine/common/util/: logging.h  pybind_helper.h
transformer_engine/jax/: activation.py  attention.py  cpp_extensions.py  dense.py  einsum.py  ep.py  gemm.py  layernorm_dense.py  layernorm_mlp.py  mlp.py  sharding.py  tensor.py  test.py
transformer_engine/jax/cpp_extensions/: __init__.py  activation.py  amax.py  attention.py  base.py  ep.py  gemm.py  misc.py  normalization.py  quantization.py  std.out
transformer_engine/jax/csrc/: extensions.h  modules.cpp
transformer_engine/jax/csrc/extensions/: 1  activation.cpp  attention.cpp  cgemm_helper.cpp  cgemm_helper.h  ep.cpp  ffi.h  gemm.cpp  misc.h  normalization.cpp  pybind.cpp  quantization.cpp
transformer_engine/jax/flax/: module.py  transformer.py
transformer_engine/jax/quantize/: dequantizer.py  quantizer.py  scaling_modes.py  tensor.py
transformer_engine/pytorch/: distributed.py  ep.py
transformer_engine/pytorch/csrc/: extensions.h
transformer_engine/pytorch/csrc/extensions/: ep.cpp  pybind.cpp
transformer_engine/pytorch/module/: base.py
